<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_content">Account cannot be empty!</string>
    <string name="account_format">Please enter a valid email address.</string>
    <string name="account_used">Sorry, this email is already in use.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Kodak Luma</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application">Apps</string>
    <string name="audio">Music</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_update">This is the latest version</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="capture_failed">Failed to save screenshot!</string>
    <string name="capture_message">Saving...</string>
    <string name="capture_share">Share</string>
    <string name="capture_share_title">Share</string>
    <string name="capture_success">Saved to album</string>
    <string name="capture_title">Save</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="click_to_exit">Tap again to exit the app!</string>
    <string name="close_button">Close</string>
    <string name="confirm_error_message_deny">Request is denied!</string>
    <string name="confirm_error_message_error">无效字串</string>
    <string name="confirm_error_message_timeout">Request timeout!</string>
    <string name="confirm_error_ok">OK</string>
    <string name="confirm_loading_cancel">Cancel</string>
    <string name="confirm_loading_message">Waiting for permission...</string>
    <string name="confirm_loading_title">Waiting for permission...</string>
    <string name="create_account_successes">Account successfully created!</string>
    <string name="device_not_connected">No device connected!</string>
    <string name="device_offline">无效字串</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_cast_interrupt_message">Connection error!</string>
    <string name="dialog_cast_interrupt_ok">Reconnect</string>
    <string name="dialog_confirm">Please check:</string>
    <string name="dialog_connect_fail">Connection failed!</string>
    <string name="dialog_tv_know">OK</string>
    <string name="dialog_tv_tip">1. If the IP or PIN code is correct;</string>
    <string name="dialog_tv_tip2">2. If your device is connected to the same network with the receiver;</string>
    <string name="dialog_tv_tip3">3. If the isolation function of the route is disabled.</string>
    <string name="document">Doc</string>
    <string name="document_access_denied">Permission unallowed!</string>
    <string name="document_cancel">Cancel</string>
    <string name="document_empty">Not found!</string>
    <string name="document_loading">Sharing…</string>
    <string name="document_storage_disable">Stop</string>
    <string name="document_storage_disable_content">Access the Storage by clicking the Start</string>
    <string name="document_storage_enable">Start</string>
    <string name="document_storage_enable_content">You can connect to this device by the following address:</string>
    <string name="document_storage_title">Storage</string>
    <string name="document_title">Doc</string>
    <string name="document_upload_failed">Upload failed!</string>
    <string name="error">文件上传失败</string>
    <string name="eshare_app_name">EShareAPI</string>
    <string name="eshare_mirror_description_start">Tap on the button to start mirroring</string>
    <string name="eshare_mirror_description_stop">Tap on the button to stop mirroring</string>
    <string name="eshare_mirror_open_close">Mirroring</string>
    <string name="et_hint_email">email</string>
    <string name="et_hint_password">full name</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="host_assign_cast_content">Are you sure to invite %s to share screen?</string>
    <string name="host_assign_content">Are you sure to assign the Moderator to %s?</string>
    <string name="host_assign_fullscreen_content">Are you sure to invite %s for full screen display?</string>
    <string name="host_assign_ok_btn">OK</string>
    <string name="host_be_admin">Would you like to be the Moderator?</string>
    <string name="host_cast_full_request_content">Do you agree %s to display with full screen?</string>
    <string name="host_cast_request_apk">Do you agree %s to install an APK?</string>
    <string name="host_cast_request_audio_video">Do you agree %s to share audio/video?</string>
    <string name="host_cast_request_camera">Do you agree %s for camera sharing?</string>
    <string name="host_cast_request_cancel_fullcast">Do you agree %s to quit full screen display?</string>
    <string name="host_cast_request_content">%s is inviting you to share screen</string>
    <string name="host_cast_request_doc">Do you agree %s to share documents?</string>
    <string name="host_cast_request_mirror">Do you agree %s to share screen?</string>
    <string name="host_cast_request_ok_btn">Allow</string>
    <string name="host_cast_request_pics">Do you agree %s to share images?</string>
    <string name="host_cast_request_remote">Do you agree %s for remote control?</string>
    <string name="host_disconnect">Disconnect</string>
    <string name="host_function_disabled">Receiver has disabled this feature!</string>
    <string name="host_has_became">You become the Moderator</string>
    <string name="host_invite_cast">%s is inviting you to share screen</string>
    <string name="host_invite_fullscreen_content">%s is asking you for full screen display</string>
    <string name="host_recall_fullscreen_content">Do you agree %s to quit full screen display?</string>
    <string name="image">Image</string>
    <string name="input_empty">Input cannot be empty!</string>
    <string name="interrupt">文件上传服务已转到后台运行，上传完成前请勿退出本程序！</string>
    <string name="invalid_account">We didn\'t recognize that account. Please create a new one or try again.</string>
    <string name="loading_msg">Loading…</string>
    <string name="loading_title">Loading...</string>
    <string name="luma">LUMA</string>
    <string name="main_already_con">Connected to:</string>
    <string name="main_cast_now">Share Screen</string>
    <string name="main_cast_stop">Stop Sharing</string>
    <string name="main_cast_unsupported">无效字串</string>
    <string name="main_connect_cancel">Cancel</string>
    <string name="main_connect_error">Incorrect input or not connect to the same network</string>
    <string name="main_connect_error_null">&gt;连接失败，设备已离线！</string>
    <string name="main_connect_same_net">Please ensure your devices are connected to the same network.</string>
    <string name="main_connecting">Connecting</string>
    <string name="main_custom_con_devcs_hint">Enter \"IP\" or \"PIN\" code to connect</string>
    <string name="main_devices_title">Device List</string>
    <string name="main_input_again">Please enter again</string>
    <string name="main_input_pwd">Please enter the password</string>
    <string name="main_item_camera">Camera</string>
    <string name="main_item_control">Remote</string>
    <string name="main_item_document">Doc</string>
    <string name="main_item_media">Audio/Video</string>
    <string name="main_item_photo">Image</string>
    <string name="main_no_network">Disconnected</string>
    <string name="main_no_network_tip">Network error! Please check the network connection</string>
    <string name="main_title">EShare</string>
    <string name="main_tvmirror_now">TV Mirror</string>
    <string name="media_audio">Audio</string>
    <string name="media_cast">无效字串</string>
    <string name="media_date">yyyy-MM-dd</string>
    <string name="media_playing_video">Playing video %1s</string>
    <string name="media_today">无效字串</string>
    <string name="media_video">Video</string>
    <string name="media_yesterday">无效字串</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="package_cast">Install</string>
    <string name="password_content">Password cannot be empty!</string>
    <string name="password_error">Your password is incorrect! Please try again.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="settings_about_app_update">Check Update</string>
    <string name="settings_about_privacy">Privacy Policy</string>
    <string name="settings_about_service_terms">Service Agreement</string>
    <string name="settings_about_statement">Copyright © 2011-2019 EShare All Rights Reserved</string>
    <string name="tv_connect_project_tips">Make sure your projector is already connected to the same Wi-Fi network as your phone.</string>
    <string name="tv_connect_tips">You are not yet connected \nto the projector.</string>
    <string name="tv_find_devices">Devices</string>
    <string name="tv_maybelater">Maybe later</string>
    <string name="tv_projector">Connect to projector</string>
    <string name="tv_reminder">Reminder!</string>
    <string name="tv_searcher">Searching for devices…</string>
</resources>