<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_main_cast_start"
        android:background="@drawable/bg_main_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rl_main_mirror"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="@dimen/size_18sp"
            android:textColor="@color/c_333333"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_cast_now"
            android:drawableLeft="@drawable/ic_cast_selector"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_mirror"
        android:background="@drawable/bg_main_function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rl_main_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_main_cast_start">
        <TextView
            android:textSize="@dimen/size_18sp"
            android:textColor="@color/c_333333"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tvmirror_now"
            android:drawableLeft="@drawable/ic_tvmirror_selector"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_photo"
        android:layout_marginLeft="@dimen/size_18dp"
        android:layout_marginBottom="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/rl_main_media"
        style="@style/MainItem_RelativeLayout">
        <ImageView
            android:id="@+id/iv_main_photo"
            android:src="@drawable/ic_photo"
            style="@style/MainItem_ImageView"/>
        <TextView
            android:text="@string/main_item_photo"
            android:layout_below="@+id/iv_main_photo"
            style="@style/MainItem_TextView"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_media"
        android:layout_marginBottom="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rl_main_photo"
        app:layout_constraintRight_toLeftOf="@+id/rl_main_document"
        style="@style/MainItem_RelativeLayout">
        <com.caglobal.kodakluma.view.CircleBar
            android:id="@+id/cb_main_media"
            android:visibility="invisible"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginTop="26dp"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/iv_main_media"
            android:src="@drawable/ic_media"
            style="@style/MainItem_ImageView"/>
        <TextView
            android:text="@string/main_item_media"
            android:layout_below="@+id/iv_main_media"
            style="@style/MainItem_TextView"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_document"
        android:layout_marginBottom="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rl_main_media"
        app:layout_constraintRight_toLeftOf="@+id/rl_main_camera"
        style="@style/MainItem_RelativeLayout">
        <ImageView
            android:id="@+id/iv_main_document"
            android:src="@drawable/ic_document"
            style="@style/MainItem_ImageView"/>
        <TextView
            android:text="@string/main_item_document"
            android:layout_below="@+id/iv_main_document"
            style="@style/MainItem_TextView"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_camera"
        android:layout_marginBottom="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rl_main_document"
        app:layout_constraintRight_toLeftOf="@+id/rl_main_control"
        style="@style/MainItem_RelativeLayout">
        <ImageView
            android:id="@+id/iv_main_camera"
            android:src="@drawable/ic_camera"
            style="@style/MainItem_ImageView"/>
        <TextView
            android:text="@string/main_item_camera"
            android:layout_below="@+id/iv_main_camera"
            style="@style/MainItem_TextView"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_main_control"
        android:layout_marginRight="@dimen/size_18dp"
        android:layout_marginBottom="@dimen/size_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rl_main_camera"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/MainItem_RelativeLayout">
        <ImageView
            android:id="@+id/iv_main_control"
            android:src="@drawable/ic_control"
            style="@style/MainItem_ImageView"/>
        <TextView
            android:text="@string/main_item_control"
            android:layout_below="@+id/iv_main_control"
            style="@style/MainItem_TextView"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
