<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_poweroff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <TextView
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:gravity="center_vertical"
            android:background="@drawable/bg_dialog_title"
            android:paddingLeft="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_reminder"/>
        <TextView
            android:textSize="@dimen/size_18sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:text="@string/tv_connect_tips"/>
        <TextView
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_connect_device"
            android:background="0x7f0700a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Connect now"/>
        <TextView
            android:textSize="@dimen/size_16dp"
            android:textColor="#d2fff9"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_connect_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/tv_maybelater"
            android:layout_weight="0.6"/>
    </LinearLayout>
</LinearLayout>
