<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_about_app_update"
        app:layout_constraintTop_toBottomOf="@+id/vg_about_top">
        <ImageView
            android:id="@+id/tabout"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:src="0x7f0700df"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/tv_about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@+id/tabout"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/c_9a9a9a"
            android:gravity="center"
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/tv_about_app_name"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <Button
        android:textSize="@dimen/update_tv_size"
        android:textColor="@color/c_9a9a9a"
        android:id="@+id/btn_about_app_update"
        android:background="@drawable/bg_white_fill_round_btn_selector"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_28dp"
        android:text="@string/settings_about_app_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/size_12sp"
        android:textColor="@color/c_66000000"
        android:gravity="center"
        android:id="@+id/tv_about_center_anchor"
        android:layout_width="4dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="|"
        android:height="@dimen/size_30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_about_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/about_tv_selector"
        android:gravity="right"
        android:id="@+id/tv_about_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings_about_privacy"
        app:layout_constraintBottom_toTopOf="@+id/tv_about_copyright"
        app:layout_constraintEnd_toStartOf="@+id/tv_about_center_anchor"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/about_tv_selector"
        android:gravity="left"
        android:id="@+id/tv_about_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings_about_service_terms"
        app:layout_constraintBottom_toTopOf="@+id/tv_about_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_about_center_anchor"/>
    <TextView
        android:textSize="12sp"
        android:gravity="center"
        android:id="@+id/tv_about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/settings_about_statement"
        android:lineSpacingExtra="@dimen/size_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <include
        android:id="@+id/vg_about_top"
        layout="@layout/toolbar"/>
</androidx.constraintlayout.widget.ConstraintLayout>
