<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/size_18sp"
        android:layout_marginRight="@dimen/size_18sp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/iv_luma_about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="0x7f070224"/>
        <TextView
            android:textSize="21dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tv_projector"/>
        <TextView
            android:textSize="14dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tv_connect_project_tips"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16dp"
                    android:textColor="#e5fffc"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/tv_find_devices"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:textColor="#e5fffc"
                    android:gravity="center"
                    android:id="@+id/tv_find_scan"
                    android:background="@drawable/bg_scan_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:text="Refresh"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View
                android:background="@drawable/device_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/size_10dp"/>
        </LinearLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_find_devices"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16dp"/>
            <ImageView
                android:id="@+id/iv_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30dp"
                android:src="0x7f0701e5"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_find_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/tv_searcher"
                android:layout_below="@+id/iv_loading"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_devices_connect"
        android:visibility="gone"
        android:layout_width="106dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDuration="600"
            android:layout_centerInParent="true"
            style="@style/style_circle_progress"/>
        <TextView
            android:textSize="@dimen/size_14sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_connecting"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
