<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_doc_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/iv_document_back"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back_dark_selector"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:ellipsize="middle"
            android:gravity="center"
            android:id="@+id/tv_doc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_title"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/tv_enable_http_server"
            android:layout_toRightOf="@+id/iv_document_back"
            android:layout_centerVertical="true"/>
        <TextView
            android:textColor="#000000"
            android:id="@+id/tv_enable_http_server"
            android:padding="@dimen/size_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_storage_title"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_doc_toolbar">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_document"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView
        android:textSize="@dimen/size_16sp"
        android:textColor="?android:attr/textColorHint"
        android:gravity="center"
        android:id="@+id/tv_doc_empty"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/document_empty"
        android:drawableTop="@drawable/ic_empty"
        android:drawablePadding="@dimen/size_15dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>
